--- a/style.css
+++ b/style.css
@@ -1,17 +1,37 @@
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
+.menu li{
+    float: left;
+    background-color: rgb(119, 233, 153);
+    width: 150px;
+    height: 50px;
+    list-style: none;
+    line-height: 50px;
+    position: relative;
+    text-indent: 15px;
 }
 
-.hello-world {
-    text-align: center;
-    font-family: 'Arial', sans-serif;
-    color: #333;
-    background-color: #f4f4f4;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+li a{
+    text-decoration: none;
+}
+
+.menu li:hover {
+    background-color: blueviolet;
+}
+
+li:hover>a{
+    color: yellow;
+    font-weight: bold;
+}
+
+.menu li .sub_menu {
+    display: none;
+    position: absolute;
+}
+
+.menu li:hover>.sub_menu {
+    display: block;
+}
+
+.menu li .sub_menu li:hover>.sub_menu {
+    top: 0px;
+    left: 150px;
 }
